--- a/src/less/catalog.less
+++ b/src/less/catalog.less
@@ -1,7 +1,7 @@
 // catalog  左侧目录 
 .catalog{
     margin-top: 30px;
-    float:left;
+//  float:left;
 }
 .catalog .catalog-header{
     height: 30px;
