--- a/src/less/res.less
+++ b/src/less/res.less
@@ -480,6 +480,9 @@
 .res-prepare-list-item{
     margin: 5px;
 }
+.res-prepare-thumb .res-prepare-list-item{
+    margin: 0;
+}
 .res-prepare-list-item:hover{
     text-decoration: underline;
     color: #0094CE;
@@ -494,11 +497,12 @@
     line-height: 25px;
     position: absolute;
     background: #fff;
-    padding: 10px 20px;
+    padding: 10px;
     display: none;
     color: #999;
     min-width: 200px;
     z-index: 99999;
+    font-size: 14px;
 }
 .addPrepare-custom{
     width: 100px;
